@@ -14,6 +14,11 @@
    - dtucker@cvs.openbsd.org 2007/02/22 12:58:40
      [servconf.c]
      Check activep so Match and GatewayPorts work together; ok markus@
+   - ray@cvs.openbsd.org 2007/02/24 03:30:11
+     [moduli.c]
+     - strlen returns size_t, not int.
+     - Pass full buffer size to fgets.
+     OK djm@, millert@, and moritz@.
 
 20070219
   - (dtucker) OpenBSD CVS Sync
@@ -2759,4 +2764,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4622 2007/02/25 09:37:52 dtucker Exp $
+$Id: ChangeLog,v 1.4623 2007/02/25 09:38:55 dtucker Exp $
